--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "bugs": {
     "url": "https://github.com/vuejs/vue/issues"
   },
-  "homepage": "https://github.com/vuejs/vue#readme",
+  "homepage": "https://a1burning.github.io/vue2.6/",
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
